src/09_canary_roolout_a_b/yaml/02_ingress_prod.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production
  annotations:
    ingress.kubernetes.io/rewrite-target: /


spec:
  ingressClassName: nginx
  rules:
    - host: echo.prod.mydomain.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: production
                port:
                  number: 80
