src/09_canary_roolout_a_b/yaml/05_ingress_canary_a_b.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: echo.prod.mydomain.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: canary
                port:
                  number: 80
